# infolist

./: .env  .gitignore  README.md  ci.dag  ci.md  info.py  infolist-dev.yaml  infolist-prod.yaml  infolist.py  main.py  pyproject.toml
internal/cli/: infolist.py
internal/utils/: io.py
src/: infolist.py  infolistcli.py  infolisttypes.py  main.py
src/infolist/: infolistcli.py  infolisttypes.py  main.py  util.py
src/infolist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
