[project]
name = "infolist"
version = "0.1.0"
dependencies = [
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
]
requires-python = ">=3.7,<4.0"

# If you want to use Poetry only for dependency management but not for packaging, you can disable package mode by setting package-mode = false in your pyproject.toml file.
# If you did intend to install the current project, you may need to set `packages` in your pyproject.toml file.

[tool.poetry]
package-mode = false