[project]
name = "infolist"
version = "0.1.0"
description = "A simple CLI for querying the Info List"
authors = [
    {name = "Tony Gilkerson",email = "tonygilkerson@yahoo.com"}
]
readme = "README.md"
requires-python = ">3.9"
dependencies = [
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
infolist = "src.main:main"
