[project]
name = "infolist"
version = "0.1.7"
description = "A simple CLI for querying the Info List"
authors = [
    {name = "Tony Gilkerson", email = "tonygilkerson@yahoo.com"}
]
readme = "README.md"
requires-python = ">3.9"
dependencies = [
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
]

[project.scripts]
infolist = "infolist.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
